--- a/jobs/index.html
+++ b/jobs/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189652">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
+            <strong>Last update at 2018-05-31 02:10:04.223019</strong>
         </div>
     </div>
 </div>
