--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189652">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -174,7 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 12:17:25 &nbsp;•&nbsp;
                                     11 comments &nbsp;•&nbsp;
-                                    123.0 points
+                                    124.0 points
                                 </span>
                             </td>
                         </tr>
@@ -473,7 +473,7 @@
                                     <a class="node" href="https://www.massdevice.com/report-ibm-watson-health-slashes-workforce/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=shawndimantha">shawndimantha</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 20:20:53 &nbsp;•&nbsp;
-                                    58 comments &nbsp;•&nbsp;
+                                    59 comments &nbsp;•&nbsp;
                                     96.0 points
                                 </span>
                             </td>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176752">NetBSD: a new version of the CDDL dtrace and ZFS code</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187715">What is Software Engineering?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/NetBSD/src/commit/bae129c5e36fe3b2ded1e036fc2f6f12430f55e0">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=algorithm314">algorithm314</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 05:38:51 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://research.swtch.com/vgo-eng">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 14:06:44 &nbsp;•&nbsp;
+                                    19 comments &nbsp;•&nbsp;
                                     92.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187715">What is Software Engineering?</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176752">NetBSD: a new version of the CDDL dtrace and ZFS code</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://research.swtch.com/vgo-eng">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 14:06:44 &nbsp;•&nbsp;
-                                    19 comments &nbsp;•&nbsp;
-                                    91.0 points
+                                    <a class="node" href="https://github.com/NetBSD/src/commit/bae129c5e36fe3b2ded1e036fc2f6f12430f55e0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=algorithm314">algorithm314</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 05:38:51 &nbsp;•&nbsp;
+                                    5 comments &nbsp;•&nbsp;
+                                    92.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
+            <strong>Last update at 2018-05-31 02:10:04.223019</strong>
         </div>
     </div>
 </div>
