--- a/top_stories/daily/index.html
+++ b/top_stories/daily/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189652">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -173,8 +173,8 @@
                                     <a class="node" href="https://www.alexa.com/topsites/countries/US">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 17:53:23 &nbsp;•&nbsp;
-                                    417 comments &nbsp;•&nbsp;
-                                    798.0 points
+                                    420 comments &nbsp;•&nbsp;
+                                    805.0 points
                                 </span>
                             </td>
                         </tr>
@@ -214,7 +214,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 15:55:27 &nbsp;•&nbsp;
                                     216 comments &nbsp;•&nbsp;
-                                    323.0 points
+                                    325.0 points
                                 </span>
                             </td>
                         </tr>
@@ -253,8 +253,8 @@
                                     <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 18:37:35 &nbsp;•&nbsp;
-                                    122 comments &nbsp;•&nbsp;
-                                    254.0 points
+                                    123 comments &nbsp;•&nbsp;
+                                    256.0 points
                                 </span>
                             </td>
                         </tr>
@@ -314,7 +314,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 06:38:38 &nbsp;•&nbsp;
                                     208 comments &nbsp;•&nbsp;
-                                    213.0 points
+                                    214.0 points
                                 </span>
                             </td>
                         </tr>
@@ -333,8 +333,8 @@
                                     <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 13:14:45 &nbsp;•&nbsp;
-                                    110 comments &nbsp;•&nbsp;
-                                    204.0 points
+                                    112 comments &nbsp;•&nbsp;
+                                    206.0 points
                                 </span>
                             </td>
                         </tr>
@@ -353,8 +353,8 @@
                                     <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:10:42 &nbsp;•&nbsp;
-                                    30 comments &nbsp;•&nbsp;
-                                    186.0 points
+                                    31 comments &nbsp;•&nbsp;
+                                    187.0 points
                                 </span>
                             </td>
                         </tr>
@@ -393,7 +393,7 @@
                                     <a class="node" href="https://mtlynch.io/since-quitting/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=TonnyGaric">TonnyGaric</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 11:42:29 &nbsp;•&nbsp;
-                                    93 comments &nbsp;•&nbsp;
+                                    94 comments &nbsp;•&nbsp;
                                     161.0 points
                                 </span>
                             </td>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=jhchen">jhchen</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 15:04:45 &nbsp;•&nbsp;
                                     27 comments &nbsp;•&nbsp;
-                                    157.0 points
+                                    159.0 points
                                 </span>
                             </td>
                         </tr>
@@ -433,7 +433,7 @@
                                     <a class="node" href="https://www.reuters.com/article/us-health-lifespan/china-overtakes-us-for-healthy-lifespan-who-data-idUSKCN1IV15L">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 23:00:34 &nbsp;•&nbsp;
-                                    97 comments &nbsp;•&nbsp;
+                                    100 comments &nbsp;•&nbsp;
                                     147.0 points
                                 </span>
                             </td>
@@ -533,7 +533,7 @@
                                     <a class="node" href="https://build2.org/build2-toolchain/doc/build2-toolchain-intro.xhtml">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=firebacon">firebacon</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 16:05:02 &nbsp;•&nbsp;
-                                    39 comments &nbsp;•&nbsp;
+                                    40 comments &nbsp;•&nbsp;
                                     136.0 points
                                 </span>
                             </td>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
+            <strong>Last update at 2018-05-31 02:10:04.223019</strong>
         </div>
     </div>
 </div>
