--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189652">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -213,7 +213,7 @@
                                     <a class="node" href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:28:00 &nbsp;•&nbsp;
-                                    449 comments &nbsp;•&nbsp;
+                                    450 comments &nbsp;•&nbsp;
                                     268.0 points
                                 </span>
                             </td>
@@ -253,8 +253,8 @@
                                     <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 18:37:35 &nbsp;•&nbsp;
-                                    122 comments &nbsp;•&nbsp;
-                                    254.0 points
+                                    123 comments &nbsp;•&nbsp;
+                                    256.0 points
                                 </span>
                             </td>
                         </tr>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 06:38:38 &nbsp;•&nbsp;
                                     208 comments &nbsp;•&nbsp;
-                                    213.0 points
+                                    214.0 points
                                 </span>
                             </td>
                         </tr>
@@ -466,15 +466,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
-                                    205.0 points
+                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
+                                    112 comments &nbsp;•&nbsp;
+                                    206.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,15 +486,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
-                                    110 comments &nbsp;•&nbsp;
-                                    204.0 points
+                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
+                                    9 comments &nbsp;•&nbsp;
+                                    205.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                     <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    55 comments &nbsp;•&nbsp;
+                                    56 comments &nbsp;•&nbsp;
                                     192.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
+            <strong>Last update at 2018-05-31 02:10:04.223019</strong>
         </div>
     </div>
 </div>
