--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189652">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -273,7 +273,7 @@
                                     <a class="node" href="https://www.reuters.com/article/us-health-lifespan/china-overtakes-us-for-healthy-lifespan-who-data-idUSKCN1IV15L">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 23:00:34 &nbsp;•&nbsp;
-                                    97 comments &nbsp;•&nbsp;
+                                    100 comments &nbsp;•&nbsp;
                                     147.0 points
                                 </span>
                             </td>
@@ -453,7 +453,7 @@
                                     <a class="node" href="https://build2.org/build2-toolchain/doc/build2-toolchain-intro.xhtml">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=firebacon">firebacon</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 16:05:02 &nbsp;•&nbsp;
-                                    39 comments &nbsp;•&nbsp;
+                                    40 comments &nbsp;•&nbsp;
                                     136.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
+            <strong>Last update at 2018-05-31 02:10:04.223019</strong>
         </div>
     </div>
 </div>
