--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189652">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -314,7 +314,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=chewxy">chewxy</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 05:26:42 &nbsp;•&nbsp;
                                     114 comments &nbsp;•&nbsp;
-                                    382.0 points
+                                    383.0 points
                                 </span>
                             </td>
                         </tr>
@@ -534,7 +534,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 15:55:27 &nbsp;•&nbsp;
                                     216 comments &nbsp;•&nbsp;
-                                    323.0 points
+                                    325.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
+            <strong>Last update at 2018-05-31 02:10:04.223019</strong>
         </div>
     </div>
 </div>
