--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181315">An Example Microservice Back End for Kubernetes, Bazel, Go, Java, GRPC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189652">Write every day, measure your progress, achieve your writing goals</a>
                                 </span>
                             </td>
                         </tr>
@@ -186,14 +186,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165866">Zero-Overhead Tree Processing with the Visitor Pattern</a>
+                                    <a href="https://news.ycombinator.com/item?id=17185569">Lobotomizing Gnome</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 07:07:37 &nbsp;•&nbsp;
-                                    80 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 06:38:38 &nbsp;•&nbsp;
+                                    208 comments &nbsp;•&nbsp;
                                     214.0 points
                                 </span>
                             </td>
@@ -206,15 +206,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185569">Lobotomizing Gnome</a>
+                                    <a href="https://news.ycombinator.com/item?id=17165866">Zero-Overhead Tree Processing with the Visitor Pattern</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 06:38:38 &nbsp;•&nbsp;
-                                    208 comments &nbsp;•&nbsp;
-                                    213.0 points
+                                    <a class="node" href="http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 07:07:37 &nbsp;•&nbsp;
+                                    80 comments &nbsp;•&nbsp;
+                                    214.0 points
                                 </span>
                             </td>
                         </tr>
@@ -306,15 +306,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
-                                    205.0 points
+                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
+                                    112 comments &nbsp;•&nbsp;
+                                    206.0 points
                                 </span>
                             </td>
                         </tr>
@@ -326,15 +326,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
-                                    110 comments &nbsp;•&nbsp;
-                                    204.0 points
+                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
+                                    9 comments &nbsp;•&nbsp;
+                                    205.0 points
                                 </span>
                             </td>
                         </tr>
@@ -413,7 +413,7 @@
                                     <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    55 comments &nbsp;•&nbsp;
+                                    56 comments &nbsp;•&nbsp;
                                     192.0 points
                                 </span>
                             </td>
@@ -553,8 +553,8 @@
                                     <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:10:42 &nbsp;•&nbsp;
-                                    30 comments &nbsp;•&nbsp;
-                                    186.0 points
+                                    31 comments &nbsp;•&nbsp;
+                                    187.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
+            <strong>Last update at 2018-05-31 02:10:04.223019</strong>
         </div>
     </div>
 </div>
