--- a/jobs/index.html
+++ b/jobs/index.html
@@ -144,7 +144,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17193473">Hiring engineers to help change education at  Clever (YC S12)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17193473">Clever (YC S12) is hiring engineers to help change education</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 02:50:03.548453</strong>
+            <strong>Last update at 2018-05-31 03:00:04.444579</strong>
         </div>
     </div>
 </div>
