--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -214,7 +214,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:31:18 &nbsp;•&nbsp;
                                     9 comments &nbsp;•&nbsp;
-                                    122.0 points
+                                    123.0 points
                                 </span>
                             </td>
                         </tr>
@@ -294,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 21:54:47 &nbsp;•&nbsp;
                                     38 comments &nbsp;•&nbsp;
-                                    110.0 points
+                                    113.0 points
                                 </span>
                             </td>
                         </tr>
@@ -353,7 +353,7 @@
                                     <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-30/buffett-said-to-have-offered-uber-3-billion-but-talks-crumbled">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tristanj">tristanj</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 20:10:50 &nbsp;•&nbsp;
-                                    54 comments &nbsp;•&nbsp;
+                                    55 comments &nbsp;•&nbsp;
                                     97.0 points
                                 </span>
                             </td>
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 14:06:44 &nbsp;•&nbsp;
                                     21 comments &nbsp;•&nbsp;
-                                    96.0 points
+                                    97.0 points
                                 </span>
                             </td>
                         </tr>
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dfee">dfee</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 17:30:17 &nbsp;•&nbsp;
                                     19 comments &nbsp;•&nbsp;
-                                    93.0 points
+                                    94.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185319">Y’all Ain’t Killing Me: The Rise of “Super Jobs.”</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190864">Signed Integers Are Two’s Complement</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://theunderemployedlife.com/yall-aint-killing-rise-super-jobs/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fabianhjr">fabianhjr</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 05:33:03 &nbsp;•&nbsp;
-                                    19 comments &nbsp;•&nbsp;
-                                    69.0 points
+                                    <a class="node" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:25:23 &nbsp;•&nbsp;
+                                    32 comments &nbsp;•&nbsp;
+                                    70.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189396">Bye, Chrome: Why I’m switching to Firefox</a>
+                                    <a href="https://news.ycombinator.com/item?id=17185319">Y’all Ain’t Killing Me: The Rise of “Super Jobs.”</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.fastcodesign.com/90174010/bye-chrome-why-im-switching-to-firefox-and-you-should-too">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ProAm">ProAm</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:00:09 &nbsp;•&nbsp;
-                                    33 comments &nbsp;•&nbsp;
-                                    68.0 points
+                                    <a class="node" href="http://theunderemployedlife.com/yall-aint-killing-rise-super-jobs/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=fabianhjr">fabianhjr</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 05:33:03 &nbsp;•&nbsp;
+                                    19 comments &nbsp;•&nbsp;
+                                    69.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 05:10:04.841365</strong>
+            <strong>Last update at 2018-05-31 05:20:03.877910</strong>
         </div>
     </div>
 </div>
