--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
                                     57 comments &nbsp;•&nbsp;
-                                    195.0 points
+                                    196.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 23:00:34 &nbsp;•&nbsp;
                                     127 comments &nbsp;•&nbsp;
-                                    192.0 points
+                                    195.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187436">Odyssey – Scalable PostgreSQL connection pooler</a>
+                                    <a href="https://news.ycombinator.com/item?id=17188232">How to Sell – a guide for SaaS startups</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/yandex/odyssey">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:25:10 &nbsp;•&nbsp;
-                                    37 comments &nbsp;•&nbsp;
-                                    186.0 points
+                                    <a class="node" href="https://www.entrepidpartners.com/how-to-sell-guide">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jhchen">jhchen</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 15:04:45 &nbsp;•&nbsp;
+                                    29 comments &nbsp;•&nbsp;
+                                    187.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 05:10:04.841365</strong>
+            <strong>Last update at 2018-05-31 05:20:03.877910</strong>
         </div>
     </div>
 </div>
